# matter

./: .gitignore  AGENTS.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: android-release.yml
android/app/: build.gradle.kts
assets/: homeservers.json
ios/: Podfile  rust_lib_matter.podspec
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/providers/: auth_provider.dart  authenticated_media_cache.dart  chat_provider.dart  connection_provider.dart  message_cache_persistence.dart  message_ordering.dart  mutable_state.dart  navigation_provider.dart  user_provider.dart
lib/widgets/: app_avatar.dart  max_content_width.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist  (+2 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: matrix.rs
rust/src/api/matrix/: sdk_timeline.rs
test/: attachment_picker_test.dart  auth_provider_test.dart  authenticated_media_cache_test.dart  chat_detail_lifecycle_test.dart  chat_list_item_test.dart  chat_provider_helpers_test.dart  chat_provider_state_test.dart  chat_timestamp_test.dart  diagnostic_exporter_test.dart  file_download_saver_test.dart  forward_message_sheet_test.dart  homeserver_list_test.dart  homeserver_resolver_test.dart  image_message_bubble_test.dart  latest_message_control_test.dart  matrix_html_mention_test.dart  message_cache_persistence_test.dart  message_draft_test.dart  message_input_picker_test.dart  message_insert_animation_test.dart  message_text_test.dart  new_bubbles_test.dart  send_flight_test.dart  sticker_preview_test.dart
(+59 files in other folders)
