[package]
name = "rust_lib_matter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
matrix-sdk = { version = "0.11", default-features = false, features = [
  "e2e-encryption",
  "rustls-tls",
  "bundled-sqlite",
] }
ruma = { version = "0.13", features = ["client-api-c"] }
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
] }
anyhow = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
log = "0.4"
dirs = "6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
