[package]
name = "rust_lib_matter"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
matrix-sdk = { version = "0.18", default-features = false, features = [
  "e2e-encryption",
  "bundled-sqlite",
] }
matrix-sdk-ui = { version = "0.18", default-features = false }
ruma = { version = "0.16", features = [
  "client-api-c",
  "html-matrix",
  "unstable-msc2545",
] }
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "net",
  "io-util",
  "time",
] }
anyhow = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
log = "0.4"
dirs = "6"
futures-util = "0.3"
mime = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
